[package]
name = "vert"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["cargo"] }
futures = "0.3"
html5ever = "0.26"
reqwest = { version = "0.11", features = ["gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "time",
] }
tokio = { version = "1.29", features = ["macros", "net", "rt-multi-thread"] }
toml = { version = "0.7", default-features = false, features = ["parse"] }

[profile.release]
lto = "thin"
